2005-07-18  Mark Kettenis  <kettenis@gnu.org>

	* hppa-tdep.h (hppa_frame_prev_register_helper): Change types of
	last argument to `gdb_byte *'.
	* hppa-tdep.c (hppa32_convert_from_func_ptr_addr): Rewrite.
	(hppa_frame_prev_register_helper): Change types of last argument
	to `gdb_byte *'.
	* hppa-hpux-tdep.c (hppa_hpux_sigtramp_frame_prev_register):
	Change types of last argument to `gdb_byte *'.
	
2005-07-18  Mark Kettenis  <kettenis@gnu.org>
	    Jason Molenda  <jmolenda@apple.com>

	* i386-tdep.c (i386_match_insn): Match complete instruction
	pattern.

2005-07-18  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.c (i386_reg_struct_return_p): Handle structures with a
	single 'long double' member correctly.
	(i386_return_value): Tweak comment.

2005-07-16  Nick Roberts  <nickrob@snap.net.nz>

	* mi/gdb-mi.el:  Update for changes in Emacs 22.0.50.  Bring more
	features over from gdb-ui.el.  Use "-var-update --all-values" for
	faster re-display of watch expressions.

2005-07-15  Mark Kettenis  <kettenis@gnu.org>
	    Marcel Moolenaar  <marcel@xcllnt.net>

	* sparc64fbsd-nat.c: Include "regcache.h", <sys/types.h>,
	<machine/pcb.h> and "bsd-kvm.h".
	(sparc64fbsd_kvm_supply_pcb): New function.
	(_initialize_sparc64fbsd_nat): Enable libkvm interface.
	* config/sparc/fbsd.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.
	* Makefile.in (sparc64fbsd-nat.o): Update dependencies.

2005-07-15  Nick Roberts  <nickrob@snap.net.nz>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* mi/mi-cmds.h (mi_no_values, mi_simple_values, mi_all_values): New
	declarations.
	* mi/mi-cmd-stack.c (mi_cmd_stack_list_locals): Use string
	constants instead of literals for MI command options.
	* mi/mi-cmd-var.c (mi_no_values, mi_simple_values, mi_all_values):
	New variables.
	(mi_parse_values_option, mi_print_value_p): New functions.
	(mi_cmd_var_list_children): Use mi_parse_values_option and
	mi_print_value_p.
	(mi_cmd_var_update): Support a PRINT_VALUES option.  Update calls